--- a/microservices/accounts/src/main/resources/application.yml
+++ b/microservices/accounts/src/main/resources/application.yml
@@ -4,16 +4,15 @@ spring:
   application:
     name: account-service
   datasource:
-    url: jdbc:h2:mem:testdb
-    username: sa
-    password: ''
-  h2:
-    console:
-      enabled: true
+    url: jdbc:mysql://localhost:3306/account
+    username: "root"
+    password: "ayush@123"
   jpa:
-    database-platform: org.hibernate.dialect.PostgreSQLDialect
     hibernate:
       ddl-auto: update
     show-sql: true
+    properties:
+      hibernate:
+        format_sql: true
 
 
