--- a/microservices/accounts/src/main/resources/application.yml
+++ b/microservices/accounts/src/main/resources/application.yml
@@ -1,5 +1,7 @@
 server:
   port: 8080
+  servlet:
+    context-path: /api
 spring:
   application:
     name: account-service
@@ -14,5 +16,14 @@ spring:
     properties:
       hibernate:
         format_sql: true
+springdoc:
+  swagger-ui:
+    path: /swagger-ui.html
+  api-docs:
+    path: /v3/api-docs
+
+
+
+
 
 
